--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
 	<div class="form-group">
 	<label> Enter Your Email </label>
-	<input type="text" class="form-control">
+	<input type="email" class="form-control">
 	</div>
 	
 	<div class="form-group">
@@ -37,12 +37,12 @@
 	
 	<div class="form-group">
 	<label> Enter Your Password </label>
-	<input type="text" class="form-control">
+	<input type="password" class="form-control">
 	</div>
 	
 	<div class="form-group">
 	<label> Retype Your Password </label>
-	<input type="text" class="form-control">
+	<input type="password" class="form-control">
 	</div>
 	
 	<div class="form-group">
