--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	
 	<div class="form-group">
 	<label> Enter Your Pone Number </label>
-	<input type="text" class="form-control">
+	<input type="number" class="form-control">
 	</div>
 	
 	<div class="form-group">
